# kubesight-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: .gitkeep  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_add_incident_resolution.py
backend/app/: .gitkeep  __init__.py  main.py
backend/app/api/: .gitkeep  deps.py  kubernetes_deps.py
backend/app/api/v1/: .gitkeep  router.py
backend/app/api/v1/endpoints/: ai.py  analytics.py  auth.py  health.py  incidents.py  kubernetes.py  metrics.py  monitoring.py
backend/app/core/: .gitkeep  __init__.py  config.py  exceptions.py  security.py
backend/app/db/: .gitkeep  base.py
backend/app/models/: .gitkeep  __init__.py  ai_analysis.py  cluster.py  enums.py  event.py  incident.py  log_entry.py  metric.py  mixins.py  namespace.py  pod.py  service.py  user.py  workload.py
backend/app/repositories/: .gitkeep  ai_analysis_repository.py  incident_repository.py  kubernetes_catalog_repository.py  metrics_repository.py  user_repository.py
backend/app/schemas/: .gitkeep  ai.py  analytics.py  auth.py  health.py  incident.py  kubernetes.py  metrics.py  monitoring.py  user.py
backend/app/services/: .gitkeep  __init__.py  ai_assistant_service.py  analytics_service.py  auth_service.py  health_scoring_service.py  incident_detection_service.py  incident_history_service.py  kubernetes_service.py  metrics_collection_service.py  monitoring_service.py
backend/app/workers/: .gitkeep  __init__.py  background_worker.py
backend/tests/: .gitkeep  conftest.py  test_ai_assistant_service.py  test_analytics_api.py  test_analytics_service.py  test_auth_api.py  test_auth_service.py  test_background_worker.py  test_health_scoring_service.py  test_incident_history_service.py  test_incidents_api.py  test_metrics_collection_service.py
docker/: .gitkeep  backend.Dockerfile  frontend.Dockerfile
docs/: ai-assistant.md  analytics.md  backend-architecture.md  background-worker.md  ci-cd.md  database-schema.md  folder-structure.md  incident-history.md  kubernetes-integration.md  live-logs.md  monitoring-rules.md  roadmap.md
frontend/: .gitkeep  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+70 files in other folders)
