[project]
name = "kubesight-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Kubernetes health monitoring and incident prediction."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "kubernetes>=30.1.0",
  "bcrypt>=4.0.1,<4.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # FastAPI intentionally uses dependency marker calls in endpoint signatures.
  "B008",
  # SQLAlchemy relationship annotations stay quoted for runtime-safe forward refs.
  "UP037",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unused_ignores = true
